EPBDS-9560 Support relative pathes