@@ -1,8 +1,10 @@
 package org.openl.rules.repository.git;
 
 import java.io.*;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -2151,13 +2153,9 @@ public class GitRepository implements FolderRepository, BranchRepository, Closea
         if (uriOrPath == null) {
             return null;
         }
-        if (uriOrPath.startsWith("/") || uriOrPath.startsWith("\\")) {
-            // Absolute path
-            return new File(uriOrPath).toURI();
-        }
         try {
-            return new URI(uriOrPath);
-        } catch (URISyntaxException e) {
+            return new URL(uriOrPath).toURI();
+        } catch (URISyntaxException | MalformedURLException e) {
             // uri can be a folder path. It's not valid URI but git accepts paths too.
             return new File(uriOrPath).toURI();
         }
